1. Fixed POM file for Currency module. 2. Bitcoin blockchain synchronization fixed, by using FileSystem as preliminary data storage before IPFS(Issue:#1) . 3. Implemented/added Currency info (Issue:#6)

--- a/bex-currency/pom.xml
+++ b/bex-currency/pom.xml
@@ -6,8 +6,8 @@
         <artifactId>bex-parent</artifactId>
         <version>1.2-SNAPSHOT</version>
     </parent>    
-    <artifactId>bex-ecurrency</artifactId>
-    <name>HS-BE E-Curreny</name>
+    <artifactId>bex-currency</artifactId>
+    <name>HS-Bex Currency</name>
 
     <dependencies>
      
