1. Updated Jackson,Sprinc-Core maven dependency versions. 2. Added custom sycnhronization feature (from Database to IPFS) to Bitcoin-Core.

--- a/bex-web/src/main/resources/config-dev.properties
+++ b/bex-web/src/main/resources/config-dev.properties
@@ -22,7 +22,7 @@ node.bitcoin.db.password = blocknode
 
 node.bitcoin-testnet3.peer.host = blocknode-db.grouvi.org
 node.bitcoin-testnet3.db.host = blocknode-db.grouvi.org
-node.bitcoin-testnet3.db.name = bittestnet
+node.bitcoin-testnet3.db.name = btctestnet
 node.bitcoin-testnet3.db.username = blocknode
 node.bitcoin-testnet3.db.password = blocknode
 
