--- a/bex-web/src/main/resources/config-local.properties
+++ b/bex-web/src/main/resources/config-local.properties
@@ -22,7 +22,7 @@ node.bitcoin.db.password = postgres
 
 node.bitcoin-testnet3.peer.host = localhost
 node.bitcoin-testnet3.db.host = localhost
-node.bitcoin-testnet3.db.name = bittestnet
+node.bitcoin-testnet3.db.name = btctestnet
 node.bitcoin-testnet3.db.username = postgres
 node.bitcoin-testnet3.db.password = postgres
 
