Freeze of the implementation with BitcoinJ.

--- a/bex-web/src/main/resources/config-dev.properties
+++ b/bex-web/src/main/resources/config-dev.properties
@@ -12,6 +12,7 @@ system.app.external.resource.location = /tmp/blocknode
 
 ############## Node Bitcoin-Main Net ##########################
 
+node.bitcoin.status.active = 0
 node.bitcoin.peer.host = localhost, blocknode-db.grouvi.org
 node.bitcoin.db.host = blocknode-db.grouvi.org
 node.bitcoin.db.name = bitmainnet
@@ -20,6 +21,7 @@ node.bitcoin.db.password = blocknode
 
 ############## Node Bitcoin - Testnet ##########################
 
+node.bitcoin-testnet3.status.active = 1
 node.bitcoin-testnet3.peer.host = blocknode-db.grouvi.org
 node.bitcoin-testnet3.db.host = blocknode-db.grouvi.org
 node.bitcoin-testnet3.db.name = btctestnet
@@ -28,19 +30,20 @@ node.bitcoin-testnet3.db.password = blocknode
 
 ############## Node Bitcoin Regtest ##########################
 
+node.bitcoin-regtest.status.active = 1
 node.bitcoin-regtest.peer.host = blocknode04.grouvi.org
 node.bitcoin-regtest.db.host = blocknode-db.grouvi.org
-node.bitcoin-regtest.db.name = bitregtest
+node.bitcoin-regtest.db.name = btcregtest
 node.bitcoin-regtest.db.username = blocknode
 node.bitcoin-regtest.db.password = blocknode
 
 ############## Data Node IPFS ##########################
 
-node.ipfs.id = QmVefrf2xrWzGzPpERF6fRHeUTh9uVSyfHHh4cWgUBnXpq
+node.ipfs.id = QmRTVzQskeQk4fvyTAAK65DDJVZvensDzeKvXfR2QRByKQ
 node.ipfs.root.dir = /io-hs/data
 node.ipfs.host = localhost
 node.ipfs.gateway.url = http://ipfs.grouvi.org
-node.ipfs.api.url = http://ipfs-api.grouvi.org
+node.ipfs.api.url = http://ipfs.grouvi.org:5001
 
 ############## Service CoinDesk  ##########################
 
