--- a/bex-web/src/main/resources/config-local.properties
+++ b/bex-web/src/main/resources/config-local.properties
@@ -12,14 +12,16 @@ system.app.external.resource.location = /tmp/blocknode
 
 ############## Node Bitcoin-Main Net ##########################
 
+node.bitcoin.status.active = 0
 node.bitcoin.peer.host = localhost
 node.bitcoin.db.host = localhost
-node.bitcoin.db.name = bitmainnet
+node.bitcoin.db.name = btcmainnet
 node.bitcoin.db.username = postgres
 node.bitcoin.db.password = postgres
 
 ############## Node Bitcoin - Testnet ##########################
 
+node.bitcoin-testnet3.status.active = 1
 node.bitcoin-testnet3.peer.host = localhost
 node.bitcoin-testnet3.db.host = localhost
 node.bitcoin-testnet3.db.name = btctestnet
@@ -28,19 +30,20 @@ node.bitcoin-testnet3.db.password = postgres
 
 ############## Node Bitcoin Regtest ##########################
 
+node.bitcoin-regtest.status.active = 1
 node.bitcoin-regtest.peer.host = blocknode04.grouvi.org
 node.bitcoin-regtest.db.host = localhost
-node.bitcoin-regtest.db.name = bitregtest
+node.bitcoin-regtest.db.name = btcregtest
 node.bitcoin-regtest.db.username = postgres
 node.bitcoin-regtest.db.password = postgres
 
 ############## Data Node IPFS ##########################
 
-node.ipfs.id = QmVefrf2xrWzGzPpERF6fRHeUTh9uVSyfHHh4cWgUBnXpq
+node.ipfs.id = QmRTVzQskeQk4fvyTAAK65DDJVZvensDzeKvXfR2QRByKQ
 node.ipfs.root.dir = /io-hs/data
 node.ipfs.host = localhost
 node.ipfs.gateway.url = http://ipfs.grouvi.org
-node.ipfs.api.url = http://ipfs-api.grouvi.org
+node.ipfs.api.url = http://ipfs.grouvi.org:5001
 
 ############## Service CoinDesk  ##########################
 
