--- a/bex-web/src/main/resources/db/db-dev.properties
+++ b/bex-web/src/main/resources/db/db-dev.properties
@@ -19,8 +19,7 @@ db.preferredTestQuery = SELECT 1 from userl
 
 #Hibernate Configuration:
 hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
-hibernate.show_sql = true
-hibernate.format_sql = true
+hibernate.show_sql = false
+hibernate.format_sql = false
 hibernate.default_schema = default
 hibernate.hbm2ddl.auto = update
-jgeos312
