--- a/bex-blockchain/pom.xml
+++ b/bex-blockchain/pom.xml
@@ -34,18 +34,28 @@
             <artifactId>ehcache</artifactId>
         </dependency>
         
-       <!-- ******** DB ******************** -->
+         <!-- Spring data -->
 
         <dependency>
-            <groupId>com.zaxxer</groupId>
-            <artifactId>HikariCP</artifactId>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-orm</artifactId>
         </dependency>
-        
+
         <dependency>
-            <groupId>org.postgresql</groupId>
-            <artifactId>postgresql</artifactId>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
         </dependency>
-        
+
+        <!-- ******** Hibernate ******************** -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+        </dependency>
+                
              
         <!-- ****** Bex Common ********** -->
         <dependency>
