--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,7 @@
         <module>bex-blockchain</module>
         <module>bex-web</module>
     </modules>
-    
+
     <repositories>
         <repository>
             <id>jitpack.io</id>
@@ -131,9 +131,18 @@
             </dependency>
 
 
-            <!-- ******** Hibernate ******************** <dependency> <groupId>org.hibernate</groupId> <artifactId>hibernate-core</artifactId> 
-                <version>${hibernate.version}</version> </dependency> <dependency> <groupId>org.hibernate</groupId> <artifactId>hibernate-entitymanager</artifactId> 
-                <version>${hibernate.version}</version> </dependency> -->
+            <!-- ******** Hibernate ******************** -->
+            <dependency>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-core</artifactId>
+                <version>${hibernate.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-entitymanager</artifactId>
+                <version>${hibernate.version}</version>
+            </dependency>
+            
 
             <!-- ******** DB ******************** -->
 
