--- a/bex-web/src/main/resources/config-dev.properties
+++ b/bex-web/src/main/resources/config-dev.properties
@@ -10,45 +10,37 @@ system.app.date.time.format.zoned = yyyy-MM-dd'T'HH:mm:ss.SSS'Z'
 
 system.app.external.resource.location = /tmp/blocknode
 
-############## Node Bitcoin-Main Net ##########################
+############## Node Bitcoin  ##########################
 
-node.bitcoin.status.active = 0
-node.bitcoin.peer.host = localhost, blocknode-db.grouvi.org
-node.bitcoin.db.host = blocknode-db.grouvi.org
-node.bitcoin.db.name = bitmainnet
-node.bitcoin.db.username = blocknode
-node.bitcoin.db.password = blocknode
+node.btc.status.active = 1
+node.btc.host = btc.horizontalsystems.xyz
 
-############## Node Bitcoin - Testnet ##########################
+node.btc-testnet3.status.active = 1
+node.btc-testnet3.host = btc-testnet.horizontalsystems.xyz
 
-node.bitcoin-testnet3.status.active = 1
-node.bitcoin-testnet3.peer.host = blocknode-db.grouvi.org
-node.bitcoin-testnet3.db.host = blocknode-db.grouvi.org
-node.bitcoin-testnet3.db.name = btctestnet
-node.bitcoin-testnet3.db.username = blocknode
-node.bitcoin-testnet3.db.password = blocknode
+node.btc-regtest.status.active = 1
+node.btc-regtest.host = btc-regtest.horizontalsystems.xyz
 
-############## Node Bitcoin Regtest ##########################
+############## Node Bitcoin-Cash  ########################
 
-node.bitcoin-regtest.status.active = 1
-node.bitcoin-regtest.peer.host = blocknode04.grouvi.org
-node.bitcoin-regtest.db.host = blocknode-db.grouvi.org
-node.bitcoin-regtest.db.name = btcregtest
-node.bitcoin-regtest.db.username = blocknode
-node.bitcoin-regtest.db.password = blocknode
+node.bch.status.active = 1
+node.bch.host = bch.horizontalsystems.xyz
+
+node.bch-testnet3.status.active = 1
+node.bch-testnet3.host = bch-testnet.horizontalsystems.xyz
+
+node.bch-regtest.status.active = 1
+node.bch-regtest.host = bch-regtest.horizontalsystems.xyz
 
 ############## Data Node IPFS ##########################
 
 node.ipfs.id = QmRTVzQskeQk4fvyTAAK65DDJVZvensDzeKvXfR2QRByKQ
 node.ipfs.root.dir = /io-hs/data
 node.ipfs.host = localhost
-node.ipfs.gateway.url = http://ipfs.grouvi.org
-node.ipfs.api.url = http://ipfs.grouvi.org:5001
+node.ipfs.gateway.url = http://ipfs-dev.horizontalsystems.xyz
+node.ipfs.api.url = http://ipfs-dev.horizontalsystems.xyz:5001
 
-############## Service CoinDesk  ##########################
+############## Currency Services  ##########################
 
-service.coindesk.api.url = https://api.coindesk.com
-
-############## Service Crypto Compare  ####################
-
-service.cryptocompare.api.url = https://min-api.cryptocompare.com
+service.ccy.coindesk.api.url = https://api.coindesk.com
+service.ccy.cryptocompare.api.url = https://min-api.cryptocompare.com
