--- a/bex-web/src/main/resources/db/db-dev.properties
+++ b/bex-web/src/main/resources/db/db-dev.properties
@@ -1,6 +1,6 @@
 #DB properties:
 db.driver=org.postgresql.Driver
-db.url=jdbc:postgresql://blocknode-db.grouvi.org:5432/blocknode
+db.url=jdbc:postgresql://blocknode-db.horizontalsystems.xyz:5432/blocknode
 
 db.username=blocknode
 db.password=blocknode
