--- a/bex-blockchain/pom.xml
+++ b/bex-blockchain/pom.xml
@@ -22,11 +22,13 @@
             <artifactId>spring-web</artifactId>
         </dependency>
      
-        <!-- Bitcoin-core --> 
+        <!-- Bitcoin-core 
         <dependency>
             <groupId>org.bitcoinj</groupId>
             <artifactId>bitcoinj-core</artifactId>
         </dependency>
+        --> 
+        
         
         <!-- ehcache -->
         <dependency>
