Implemented Fee estimation and storage feature (Uses various external sources mainly from BCOIN to estimate fees.).   Updated README. Issue:#5

--- a/bex-web/src/main/resources/config-local.properties
+++ b/bex-web/src/main/resources/config-local.properties
@@ -1,6 +1,6 @@
 ########### Application Settings  ##########################
 
-system.app.name = Grouvi BlockNode 
+system.app.name = HS BlockNode 
 system.app.locale = en
 system.app.date.format.short = dd.MM.yyyy
 system.app.date.format.long = dd.MM.yyyy
@@ -16,25 +16,25 @@ node.btc.status.active = 1
 node.btc.host = btc.horizontalsystems.xyz
 node.btc.api.url = https://btc.horizontalsystems.xyz
 
-node.btc-testnet3.status.active = 1
-node.btc-testnet3.host = btc-testnet.horizontalsystems.xyz
-node.btc-testnet3.api.url = http://btc-testnet.horizontalsystems.xyz
+node.btc-testnet.status.active = 1
+node.btc-testnet.host = btc-testnet.horizontalsystems.xyz
+node.btc-testnet.api.url = http://btc-testnet.horizontalsystems.xyz
 
-node.btc-regtest.status.active = 1
+node.btc-regtest.status.active = 0
 node.btc-regtest.host = btc-regtest.horizontalsystems.xyz
 node.btc-regtest.api.url = http://btc-regtest.horizontalsystems.xyz
 
 ############## Node Bitcoin-Cash  ########################
 
-node.bch.status.active = 1
+node.bch.status.active = 0
 node.bch.host = bch.horizontalsystems.xyz
 node.bch.api.url = https://bch.horizontalsystems.xyz
 
-node.bch-testnet3.status.active = 1
-node.bch-testnet3.host = bch-testnet.horizontalsystems.xyz
-node.bch-testnet3.api.url = http://bch-testnet.horizontalsystems.xyz
+node.bch-testnet.status.active = 1
+node.bch-testnet.host = bch-testnet.horizontalsystems.xyz
+node.bch-testnet.api.url = http://bch-testnet.horizontalsystems.xyz
 
-node.bch-regtest.status.active = 1
+node.bch-regtest.status.active = 0
 node.bch-regtest.host = bch-regtest.horizontalsystems.xyz
 node.bch-regtest.api.url = http://bch-regtest.horizontalsystems.xyz
 
