Created test cases for Fee Esimation. Changed Xrates API's Trading source to Coinbase. Issue:#22

--- a/bex-blockchain/pom.xml
+++ b/bex-blockchain/pom.xml
@@ -80,6 +80,11 @@
             <version>${project.version}</version>
         </dependency>
         
+        <!-- Commons-math3 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-math3</artifactId>
+        </dependency>
         
         <!-- ******* Test ********************** -->
 
