--- a/bex-common/pom.xml
+++ b/bex-common/pom.xml
@@ -70,6 +70,12 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
         </dependency>
+        
+         <!-- Commons-math3 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-math3</artifactId>
+        </dependency>
 
         <!-- ******** Logging ******************** -->
         <dependency>
