--- a/bex-web/src/main/resources/config-dev.properties
+++ b/bex-web/src/main/resources/config-dev.properties
@@ -38,6 +38,13 @@ node.bch-regtest.status.active = 1
 node.bch-regtest.host = bch-regtest.horizontalsystems.xyz
 node.bch-regtest.api.url = http://bch-regtest.horizontalsystems.xyz/apg
 
+############## Node Bitcoin-Cash  ########################
+
+node.eth.status.active = 1
+node.eth.host = infura
+node.eth.api.url = https://mainnet.infura.io/v3
+node.eth.api.key = 0355dc03ff5746c79181508539b09c2c
+
 ############## Data Node IPFS ##########################
 
 node.ipfs.id = QmRTVzQskeQk4fvyTAAK65DDJVZvensDzeKvXfR2QRByKQ
@@ -50,3 +57,4 @@ node.ipfs.api.url = http://ipfs-dev.horizontalsystems.xyz:5001
 
 service.ccy.coindesk.api.url = https://api.coindesk.com
 service.ccy.cryptocompare.api.url = https://min-api.cryptocompare.com
+
