--- a/bex-web/src/main/resources/config-local.properties
+++ b/bex-web/src/main/resources/config-local.properties
@@ -38,10 +38,17 @@ node.bch-regtest.status.active = 0
 node.bch-regtest.host = bch-regtest.horizontalsystems.xyz
 node.bch-regtest.api.url = http://bch-regtest.horizontalsystems.xyz/apg
 
+############## Node Bitcoin-Cash  ########################
+
+node.eth.status.active = 1
+node.eth.host = infura
+node.eth.api.url = https://mainnet.infura.io/v3
+node.eth.api.key = 0355dc03ff5746c79181508539b09c2c
+
 ############## Data Node IPFS ##########################
 
 #node.ipfs.id = QmRTVzQskeQk4fvyTAAK65DDJVZvensDzeKvXfR2QRByKQ
-node.ipfs.id = QmSxpioQuDSjTH6XiT5q35V7xpJqxmDheEcTRRWyMkMim7
+node.ipfs.id = QmV7ryttto84uEjQRJrZW31jpTZbRz5Wff9F6Wr4tFhnK8
 node.ipfs.root.dir = /io-hs/data
 node.ipfs.host = localhost
 node.ipfs.gateway.url = http://localhost:8080
@@ -51,4 +58,5 @@ node.ipfs.api.url = http://localhost:5001
 
 service.ccy.coindesk.api.url = https://api.coindesk.com
 service.ccy.cryptocompare.api.url = https://min-api.cryptocompare.com
+
 
