Added new erc20 token support. Added economic fee estimation feature for BTC.Issue:#55,#21

--- a/bex-web/src/main/resources/db/db-dev.properties
+++ b/bex-web/src/main/resources/db/db-dev.properties
@@ -1,9 +1,9 @@
 #DB properties:
 db.driver=org.postgresql.Driver
-db.url=jdbc:postgresql://blocknode-db.horizontalsystems.xyz:5432/blocknode
+db.url=jdbc:postgresql://localhost:5432/blockchain
 
-db.username=blocknode
-db.password=blocknode
+db.username=postgres
+db.password=postgres
 
 # DB pool properties
 db.poolName=
