--- a/bex-web/src/main/resources/db/db-local.properties
+++ b/bex-web/src/main/resources/db/db-local.properties
@@ -1,6 +1,6 @@
 #DB properties:
 db.driver=org.postgresql.Driver
-db.url=jdbc:postgresql://localhost:5432/blocknode
+db.url=jdbc:postgresql://localhost:5432/blockchain
 
 db.username=postgres
 db.password=postgres
