Fee estimation values saved to Database. Econom fee rate values are rounded to ceil (upper round).

--- a/bex-web/src/main/resources/config-dev.properties
+++ b/bex-web/src/main/resources/config-dev.properties
@@ -53,6 +53,11 @@ node.ipfs.host = localhost
 node.ipfs.gateway.url = http://ipfs-dev.horizontalsystems.xyz
 node.ipfs.api.url = http://ipfs-dev.horizontalsystems.xyz:5001
 
+node.ipfs.key.xrates.latest = KEY_XRATES_LATEST
+node.ipfs.key.xrates.historical = KEY_XRATES_HISTORICAL
+node.ipfs.key.blockchain = KEY_BLOCKCHAIN
+
+
 ############## Currency Services  ##########################
 
 service.ccy.coindesk.api.url = https://api.coindesk.com
