--- a/bex-web/src/main/resources/config-local.properties
+++ b/bex-web/src/main/resources/config-local.properties
@@ -47,12 +47,17 @@ node.eth.api.key = 0355dc03ff5746c79181508539b09c2c
 
 ############## Data Node IPFS ##########################
 
-#node.ipfs.id = QmRTVzQskeQk4fvyTAAK65DDJVZvensDzeKvXfR2QRByKQ
-node.ipfs.id = QmV7ryttto84uEjQRJrZW31jpTZbRz5Wff9F6Wr4tFhnK8
+node.ipfs.id = QmXbzcuXhjdBKLHanbX55wovapzmqncBDreXScXLb9K5QN
 node.ipfs.root.dir = /io-hs/data
 node.ipfs.host = localhost
 node.ipfs.gateway.url = http://localhost:8080
 node.ipfs.api.url = http://localhost:5001
+
+node.ipfs.key.xrates.latest = KEY_XRATES_LATEST
+node.ipfs.key.xrates.historical = KEY_XRATES_HISTORICAL
+node.ipfs.key.blockchain = KEY_BLOCKCHAIN
+node.ipfs.key.secondary = KEY_SELF2
+
 
 ############## Currency Services  ##########################
 
