--- a/pom.xml
+++ b/pom.xml
@@ -208,13 +208,19 @@
                 <version>${httpclient.version}</version>
             </dependency>
             
+            <!-- https://mvnrepository.com/artifact/commons-httpclient/commons-httpclient -->
+		<!-- 	<dependency>
+			    <groupId>commons-httpclient</groupId>
+			    <artifactId>commons-httpclient</artifactId>
+			    <version>3.1</version>
+			</dependency>
             
 
             <dependency>
                 <groupId>commons-io</groupId>
                 <artifactId>commons-io</artifactId>
                 <version>${commons-io.version}</version>
-            </dependency>
+            </dependency> -->
 
             <dependency>
                 <groupId>commons-lang</groupId>
